--- a/style.css
+++ b/style.css
@@ -23,11 +23,10 @@ header {
   border-bottom: 1px solid #1f1f1f;
 }
 
-.logo {
-  font-size: 1.8rem;
-  font-weight: bold;
-  color: #00eaff;
+.logo img {
+  height: 100px;
 }
+
 
 nav a {
   margin-left: 20px;
