--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px 40px;
-  background-color：black;
+  background-color：#000000;
   border-bottom: 1px solid #1f1f1f;
 }
 
