--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 40px 40px;
-  background-color: #000000;
+  background: transparent;
 }
 
 .logo img {
