--- a/style.css
+++ b/style.css
@@ -90,14 +90,20 @@ footer {
 
 /*--------------------------------------------------------------*/
 
-.contact {
+.about {
   text-align: center;
   padding: 100px 20px;
   background: transparent;
 }
 
-.contact h1 {
+.about h1 {
   font-size: 1.8rem;
-  margin-bottom: 20px;
+  margin-top: 20px;
   color: #ffffff;
+}
+
+.about p {
+  font-size: 1rem;
+  margin-top: 10px;
+  color: grey;
 }
