--- a/style.css
+++ b/style.css
@@ -38,6 +38,14 @@ nav a:hover {
   color: #00eaff;
 }
 
+@media screen and (max-width: 768px) {
+      nav {
+        width: 100%;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 10px;
+      }
+
 /* Hero Section */
 .hero {
   text-align: center;
